# fast_model

./: README.md  admin.py  import_libs.py  pyproject.toml
authen/: models.py
fast_model/: __init__.py  apps.py  import_libs.py  models.py
fast_model/authen/: models.py
fast_model/finance/: models.py
fast_model/warehouse/: models.py
finance/: models.py
migrations/: 0001_initial.py
