[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-model"
version = "1.0.0"
description = "Common models for projects"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Django>=3.2",
    "numpy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fast_model*"]
